pub mod message_store {
    use tonic::{Request, Response, Status};
    use proto::api::im::message::message_store_server::MessageStore;
    use proto::api::im::message::{
        StoreMessageRequest, StoreMessageResponse,
        GetMessageHistoryRequest, GetMessageHistoryResponse,
        DeleteMessageRequest, DeleteMessageResponse,
    };

    #[derive(Debug, Default)]
    pub struct MessageStoreService {}

    #[tonic::async_trait]
    impl MessageStore for MessageStoreService {
        async fn store_message(
            &self,
            request: Request<StoreMessageRequest>,
        ) -> Result<Response<StoreMessageResponse>, Status> {
            todo!("Implement store_message")
        }

        async fn get_message_history(
            &self,
            request: Request<GetMessageHistoryRequest>,
        ) -> Result<Response<GetMessageHistoryResponse>, Status> {
            todo!("Implement get_message_history")
        }

        async fn delete_message(
            &self,
            request: Request<DeleteMessageRequest>,
        ) -> Result<Response<DeleteMessageResponse>, Status> {
            todo!("Implement delete_message")
        }
    }
} 